test/fail/classes/self_outside_class.lly
#[
SyntaxError: 'self' must be used within a class.
    from self_outside_class.lly:6
]#

self
